935.	[bug]		fdupont
	Fixed 3 out of bounds accesses on vectors in DHCP++ code.
	(Trac #3854, git de263ad0008f3494a85592f78db1ec662b68e689)

934.	[bug]		fdupont
	Renamed the DHCP-DDNS constant INVALID_SOCKET to SOCKET_NOT_VALID
	to avoid conflicting with a constant of that name defined on some
	operating systems.
	(Trac #3861, git 28205225ceed03ff3126e43cd06cedbaa7d8d657)

933.	[func]*		marcin
	DHCPv4 server by default identifies a client using the
	client-identifier, if present. The new configuration
	parameter 'match-client-id' allows for disabling this
	behavior, i.e. 'chaddr' field is used to identify the
	client instead.
	(Trac #3747, git b9dc6ffd0f3396e9da8e0c83fd82164b8b8af011)

932.	[func]		kalmus
	MySQL schema has been extended with tables that can store
	host reservation. This ticket updates database schema only,
	the tables are not in use yet.
	(Trac #3567, git d2cd5d53b3f31422a342c9bb8946dad9ed1ea032)

931.	[func]		marcin
	Improved log messages emitted by the DHCPv4 server. Also,
	the server is now using multiple distinct loggers for logging
	messages pertaining to different functional parts of the
	code, e.g. packet transmission, lease allocation, DDNS etc.
	For complete list of logger names see User Guide.
	(Trac #3806, git 7b148c2dd5e2696a541883223ce1efd2de81f143)

930.	[func]		tomek
	Statistics Manager is now implemented. There is a new library
	libkea-stats that governs statistics collection. Its usage will
	be added in the upcoming tickets.
	(Trac #3793, git 68e9554ecabfc2a79731eeec1c706522e4d39332)

929.	[build]		fdupont
	Corrected problem in build system whereby specifying an
	installation directory on the "configure" command line that
	included a "+" in the name caused the build to fail.
	(Trac #3713, git 741ff09b743307bad28ae13db440e5e0f402d319)

928.	[build]		fdupont
	A CONFIG_H_WAS_INCLUDED define has been added to provide
	a way in source files to check whether config.h has been included.